<?xml version="1.0" encoding="utf-8"?>

<!-- This xml handles the views or view groups to be recycled. The Parent view is a card view. It is
     high recommended to use this view for recycler view activities -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_marginStart="-10dp">

    <!-- Below is the Linear layout that holds all the views and their attributes in the card view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:clickable="true"
        android:background="@drawable/state"
        android:backgroundTintMode="src_atop">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/imageView"
            android:src="@drawable/whatsapp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="-25dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star" />

        <LinearLayout
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="13dp"
                android:text="@string/name"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="13dp"
                android:text="@string/phoneNumber"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/s"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/num"
            android:textColor="#000000"
            android:visibility="visible"
            tools:visibility="visible" />


    </LinearLayout>


</androidx.cardview.widget.CardView>